<resources>
    <string name="app_name" translatable="false">PocketCrib</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="user">user</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="_123">123</string>
    <string name="item">Item</string>
    <string name="selected">Selected</string>
    <string name="requested">Requested</string>
    <string name="returned">Returned</string>
    <string name="request">Request</string>
    <string name="item_name">Item name:</string>
    <string name="item_quantity">Item Quantity:</string>
    <string name="item_type">Item Type:</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
