<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabBackground="@android:color/white"
        app:tabGravity="fill"
        app:tabIndicatorColor="@android:color/black"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@android:color/black"
        app:tabTextColor="@android:color/black">
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requested" />
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:layout_below="@id/tab_layout"
        android:id="@+id/cont"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>
<!--    <androidx.viewpager.widget.ViewPager-->

<!--        android:id="@+id/view_pager"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_below="@id/tab_layout"-->
<!--        app:layout_behavior="@string/appbar_scrolling_view_behavior"></androidx.viewpager.widget.ViewPager>-->

</RelativeLayout>