<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="4dp"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:padding="4dp"
            android:textSize="12sp"
            android:text="@string/item_name"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/txt_item_name"
            android:padding="4dp"
            android:textSize="12sp"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <TextView
            android:padding="4dp"
            android:textSize="12sp"
            android:text="@string/item_quantity"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_item_qty"
            android:padding="4dp"
            android:textSize="12sp"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <TextView
            android:padding="4dp"
            android:textSize="12sp"
            android:text="@string/item_type"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_item_type"
            android:padding="4dp"
            android:textSize="12sp"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>